--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>APP</title>
     <link rel="stylesheet" href="style.css">
     <h1>App Website</h1>
     <h2>Feed</h2>
