--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>APP</title>
     <link rel="stylesheet" href="style.css">
+
+<div class="topnav">
+  <a class="active" href"#appname">APP</a>
+  <a href"#login">Log In</a>
+</div>
+
     <h1>App Website</h1>
     <h2>Feed</h2>
   </head>
