--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css">
 
 <div class="topnav">
-  <a class="active" href"#appname">APP</a>
-  <a href"#login">Log In</a>
+  <a class="active" href="#appname">APP</a>
+  <a href="#login">Log In</a>
 </div>
 
     <h1>App Website</h1>
